CTO-759 | Add resource utilisation configurations for CC loki (#444)

--- a/gitops/argo-apps/base/monitoring.yaml
+++ b/gitops/argo-apps/base/monitoring.yaml
@@ -191,5 +191,53 @@ spec:
         - name: "mimir_alertmanager_limits_memory"
           value: "${ARGOCD_ENV_monitoring_mimir_alertmanager_limits_memory}"
 
+        - name: "loki_distributor_replica_count"
+          value: "${ARGOCD_ENV_monitoring_loki_distributor_replica_count}"
+        - name: "loki_ingester_replica_count"
+          value: "${ARGOCD_ENV_monitoring_loki_ingester_replica_count}"
+        - name: "loki_querier_replica_count"
+          value: "${ARGOCD_ENV_monitoring_loki_querier_replica_count}"
+        - name: "loki_query_frontend_replica_count"
+          value: "${ARGOCD_ENV_monitoring_loki_query_frontend_replica_count}"
+        - name: "loki_query_scheduler_replica_count"
+          value: "${ARGOCD_ENV_monitoring_loki_query_scheduler_replica_count}"
+        - name: "loki_compactor_replica_count"
+          value: "${ARGOCD_ENV_monitoring_loki_compactor_replica_count}"
+
+        - name: "loki_distributor_requests_cpu"
+          value: "${ARGOCD_ENV_monitoring_loki_distributor_requests_cpu}"
+        - name: "loki_distributor_requests_memory"
+          value: "${ARGOCD_ENV_monitoring_loki_distributor_requests_memory}"
+        - name: "loki_distributor_limits_cpu"
+          value: "${ARGOCD_ENV_monitoring_loki_distributor_limits_cpu}"
+        - name: "loki_distributor_limits_memory"
+          value: "${ARGOCD_ENV_monitoring_loki_distributor_limits_memory}"
+        - name: "loki_ingester_requests_cpu"
+          value: "${ARGOCD_ENV_monitoring_loki_ingester_requests_cpu}"
+        - name: "loki_ingester_requests_memory"
+          value: "${ARGOCD_ENV_monitoring_loki_ingester_requests_memory}"
+        - name: "loki_ingester_limits_cpu"
+          value: "${ARGOCD_ENV_monitoring_loki_ingester_limits_cpu}"
+        - name: "loki_ingester_limits_memory"
+          value: "${ARGOCD_ENV_monitoring_loki_ingester_limits_memory}"
+        - name: "loki_querier_limits_cpu"
+          value: "${ARGOCD_ENV_monitoring_loki_querier_limits_cpu}"
+        - name: "loki_querier_limits_memory"
+          value: "${ARGOCD_ENV_monitoring_loki_querier_limits_memory}"
+        - name: "loki_query_frontend_limits_cpu"
+          value: "${ARGOCD_ENV_monitoring_loki_query_frontend_limits_cpu}"
+        - name: "loki_query_frontend_limits_memory"
+          value: "${ARGOCD_ENV_monitoring_loki_query_frontend_limits_memory}"
+        - name: "loki_query_scheduler_limits_cpu"
+          value: "${ARGOCD_ENV_monitoring_loki_query_scheduler_limits_cpu}"
+        - name: "loki_query_scheduler_limits_memory"
+          value: "${ARGOCD_ENV_monitoring_loki_query_scheduler_limits_memory}"
+        - name: "loki_compactor_limits_cpu"
+          value: "${ARGOCD_ENV_monitoring_loki_compactor_limits_cpu}"
+        - name: "loki_compactor_limits_memory"
+          value: "${ARGOCD_ENV_monitoring_loki_compactor_limits_memory}"
+
+
+
         - name: "cloudwatch_exporter_role_arn"
           value: "${ARGOCD_ENV_monitoring_monitoring_cloudwatch_exporter_role_arn}"
