--- a/gitops/applications/base/monitoring/values-loki.yaml
+++ b/gitops/applications/base/monitoring/values-loki.yaml
@@ -51,28 +51,64 @@ metrics:
 
 # NOTE: make sure all components which are running have node affinity enabled for monitoring nodes
 ingester:
+  replicaCount: ${ARGOCD_ENV_loki_ingester_replica_count}
+  resources:
+    requests:
+      cpu: ${ARGOCD_ENV_loki_ingester_requests_cpu}
+      memory: ${ARGOCD_ENV_loki_ingester_requests_memory}
+    limits:
+      cpu: ${ARGOCD_ENV_loki_ingester_limits_cpu}
+      memory: ${ARGOCD_ENV_loki_ingester_limits_memory}
   extraArgs: ["-config.expand-env"]
   extraEnvVarsCM: ${ARGOCD_ENV_ctrl_cntr_loki_bucket_name}
   extraEnvVarsSecret: ${ARGOCD_ENV_ctrl_cntr_loki_bucket_name}
 compactor:
+  replicaCount: ${ARGOCD_ENV_loki_compactor_replica_count}
+  resources:
+    limits:
+      cpu: ${ARGOCD_ENV_loki_querier_limits_cpu}
+      memory: ${ARGOCD_ENV_loki_querier_limits_memory}
   extraArgs: ["-config.expand-env"]
   extraEnvVarsCM: ${ARGOCD_ENV_ctrl_cntr_loki_bucket_name}
   extraEnvVarsSecret: ${ARGOCD_ENV_ctrl_cntr_loki_bucket_name}
   updateStrategy:
     type: Recreate  
 distributor:
+  replicaCount: ${ARGOCD_ENV_loki_distributor_replica_count}
+  resources:
+    requests:
+      cpu: ${ARGOCD_ENV_loki_distributor_requests_cpu}
+      memory: ${ARGOCD_ENV_loki_distributor_requests_memory}
+    limits:
+      cpu: ${ARGOCD_ENV_loki_distributor_limits_cpu}
+      memory: ${ARGOCD_ENV_loki_distributor_limits_memory}
   extraArgs: ["-config.expand-env"]
   extraEnvVarsCM: ${ARGOCD_ENV_ctrl_cntr_loki_bucket_name}
   extraEnvVarsSecret: ${ARGOCD_ENV_ctrl_cntr_loki_bucket_name}
 querier:
+  replicaCount: ${ARGOCD_ENV_loki_querier_replica_count}
+  resources:
+    limits:
+      cpu: ${ARGOCD_ENV_loki_querier_limits_cpu}
+      memory: ${ARGOCD_ENV_loki_querier_limits_memory}
   extraArgs: ["-config.expand-env"]
   extraEnvVarsCM: ${ARGOCD_ENV_ctrl_cntr_loki_bucket_name}
   extraEnvVarsSecret: ${ARGOCD_ENV_ctrl_cntr_loki_bucket_name}
 queryFrontend:
+  replicaCount: ${ARGOCD_ENV_loki_query_frontend_replica_count}
+  resources:
+    limits:
+      cpu: ${ARGOCD_ENV_loki_query_frontend_limits_cpu}
+      memory: ${ARGOCD_ENV_loki_query_frontend_limits_memory}
   extraArgs: ["-config.expand-env"]
   extraEnvVarsCM: ${ARGOCD_ENV_ctrl_cntr_loki_bucket_name}
   extraEnvVarsSecret: ${ARGOCD_ENV_ctrl_cntr_loki_bucket_name}
 queryScheduler:
+  replicaCount: ${ARGOCD_ENV_loki_query_scheduler_replica_count}
+  resources:
+    limits:
+      cpu: ${ARGOCD_ENV_loki_query_scheduler_limits_cpu}
+      memory: ${ARGOCD_ENV_loki_query_scheduler_limits_memory}
   enabled: true
   extraArgs: ["-config.expand-env"]
   extraEnvVarsCM: ${ARGOCD_ENV_ctrl_cntr_loki_bucket_name}
