--- a/terraform/ccnew/default-config/common-vars.yaml
+++ b/terraform/ccnew/default-config/common-vars.yaml
@@ -126,6 +126,33 @@ mimir_ruler_limits_memory: "2Gi"
 mimir_alertmanager_limits_cpu: "100m"
 mimir_alertmanager_limits_memory: "512Mi"
 
+# monitoring/loki
+loki_distributor_replica_count: "'4'"
+loki_ingester_replica_count: "'3'"
+loki_querier_replica_count: "'1'"
+loki_query_frontend_replica_count: "'1'"
+loki_query_scheduler_replica_count: "'1'"
+loki_compactor_replica_count: "'1'"
+
+loki_distributor_requests_cpu: "100m"
+loki_distributor_requests_memory: "128Mi"
+loki_distributor_limits_cpu: "150m"
+loki_distributor_limits_memory: "192Mi"
+loki_ingester_requests_cpu: "100m"
+loki_ingester_requests_memory: "256Mi"
+loki_ingester_limits_cpu: "150m"
+loki_ingester_limits_memory: "512Mi"
+loki_querier_limits_cpu: "150m"
+loki_querier_limits_memory: "192Mi"
+loki_query_frontend_limits_cpu: "150m"
+loki_query_frontend_limits_memory: "192Mi"
+loki_query_scheduler_limits_cpu: "150m"
+loki_query_scheduler_limits_memory: "192Mi"
+loki_compactor_limits_cpu: "150m"
+loki_compactor_limits_memory: "192Mi"
+
+
+
 gitlab_helm_version: "8.1.2"
 gitlab_public_access: true
 gitlab_redis_cluster_size: "'3'"
