--- a/terraform/k8s/default-config/platform-stateful-resources.yaml
+++ b/terraform/k8s/default-config/platform-stateful-resources.yaml
@@ -122,7 +122,7 @@ central-ledger-db:
       - mojaloop
     database_name: central_ledger
     storage_size: 10G
-    replica_count: 
+    replica_count: 1
   backup_schedule:
   - name: "sat-night-backup"
     schedule: "0 0 * * 6"
