--- a/terraform/k8s/default-config/bare-metal-vars.yaml
+++ b/terraform/k8s/default-config/bare-metal-vars.yaml
@@ -1,8 +1,16 @@
 external_load_balancer_dns: publicip
+wireguard_port: 31821
+dns_provider: none
+create_ext_dns_user: true
+create_iam_user: false
+external_dns_cloud_role: "arn:ext-dns-cloud-role"
+ext_dns_cloud_policy: "arn:policy"
+object_storage_cloud_role: "arn:obj-store-role"
+backup_bucket_name: storage-bucket
 nat_public_ips: ["publicip"]
 internal_load_balancer_dns: 10.10.10.56
 egress_gateway_cidr: 10.10.100.0/24
-bastion_public_ip: publicip
+bastion_public_ips: ["publicip"]
 private_subdomain: ""
 public_subdomain: "dev1.devbaremetal.infitx-labs.com"
 int_interop_switch_subdomain: intapi
@@ -13,7 +21,8 @@ target_group_external_https_port: 32443
 target_group_external_http_port: 32080
 target_group_internal_health_port: 31081
 target_group_external_health_port: 32081
-private_network_cidr:
+private_network_cidrs:
+  - 10.10.51.0/24
 ssh_private_key: |
   -----BEGIN RSA PRIVATE KEY-----
   -----END RSA PRIVATE KEY-----
@@ -22,7 +31,8 @@ base_domain: "devbaremetal.infitx-labs.com"
 kubeapi_loadbalancer_fqdn: none
 master_hosts_0_private_ip: "10.10.100.58"
 agent_hosts: {}
-master_hosts: {}
+master_hosts:
+  {}
   # 10.10.100.58:
   #   ip: 10.10.100.58
   #   node_taints: []
@@ -71,9 +81,12 @@ master_hosts: {}
 k6s_callback_fqdn: none
 enable_k6s_test_harness: false
 test_harness_private_ip: none
+ci_iam_user_client_secret_name: "replace"
+ci_iam_user_client_id_name: "replace"
 route53_external_dns_access_key: "changeme"
 route53_external_dns_secret_key: "changeme"
 longhorn_backups_access_key: "changeme"
 longhorn_backups_secret_key: "changeme"
 longhorn_backups_bucket_name: dev1.devbaremetal.infitx-labs.com-lhbck
 dns_resolver_ip: 10.10.100.1
+rook_disk_vol: "/dev/sdb"
