--- a/gitops/applications/base/nexus/nexus-values.yaml
+++ b/gitops/applications/base/nexus/nexus-values.yaml
@@ -1,7 +1,7 @@
 image:
   repository: sonatype/nexus3
   # Overrides the image tag whose default is {{ .Chart.AppVersion }}
-  tag: "3.56.0"
+  tag: "3.75.1"
   pullPolicy: IfNotPresent
   pullSecrets: []
 
@@ -109,17 +109,13 @@ persistence:
 
 extraVolumeMounts: []
 
-resources: {}
-# We usually recommend not to specify default resources and to leave this as a conscious
-# choice for the user. This also increases chances charts run on environments with little
-# resources, such as Minikube. If you do want to specify resources, uncomment the following
-# lines, adjust them as necessary, and remove the curly braces after 'resources:'.
-#   limits:
-#     cpu: 100m
-#     memory: 128Mi
-#   requests:
-#     cpu: 100m
-#     memory: 128Mi
+resources: 
+  limits:
+    cpu: ${ARGOCD_ENV_nexus_cpu_limit}
+    memory: ${ARGOCD_ENV_nexus_memory_limit}
+  requests:
+    cpu: ${ARGOCD_ENV_nexus_cpu_request}
+    memory: ${ARGOCD_ENV_nexus_memory_request}
 
 chownDataDir: true
 
