--- a/gitops/applications/base/netbird/kustomization.yaml
+++ b/gitops/applications/base/netbird/kustomization.yaml
@@ -5,8 +5,10 @@ helmCharts:
   - name: netbird
     releaseName: netbird
     namespace: ${ARGOCD_ENV_netbird_namespace}
-    version: ${ARGOCD_ENV_netbird_helm_version}
-    repo: https://totmicro.github.io/helms
+    # version: ${ARGOCD_ENV_netbird_helm_version}
+    version: 1.5.5-rc1
+    # repo: https://totmicro.github.io/helms
+    repo: https://muzammil360.github.io/totmicro-helms
     valuesFile: netbird-values.yaml
 
 patches:
