--- a/gitops/applications/base/netbird/netbird-values.yaml
+++ b/gitops/applications/base/netbird/netbird-values.yaml
@@ -2,7 +2,7 @@ global:
   namespace: "${ARGOCD_ENV_netbird_namespace}"
 
 management:
-  enabled: false
+  replicaCount: 2
   configmap: |-
     {
       "Stuns": [
