cert initial commit

--- a/terraform/ccnew/default-config/common-vars.yaml
+++ b/terraform/ccnew/default-config/common-vars.yaml
@@ -61,6 +61,10 @@ consul_replica_count: 1
 argocd_admin_rbac_group: "argocd_administrators"
 argocd_user_rbac_group: "argocd_users"
 vault_rbac_admin_group: "techops-admin"
+vault_selfsigned_ca_cert_duration: "4320h"
+vault_selfsigned_ca_cert_renewbefore: "2160h"
+vault_internal_tls_cert_duration: "2160h"
+vault_internal_tls_cert_renewbefore: "24h"
 
 kube_prometheus_helm_version: "9.5.10"
 grafana_mimir_helm_version: "1.2.10"
