--- a/gitops/applications/base/vault/kustomization.yaml
+++ b/gitops/applications/base/vault/kustomization.yaml
@@ -3,6 +3,7 @@ kind: Kustomization
 resources:
   - namespaces.yaml
   - vault-init-crs.yaml
+  - vault-certs.yaml
   - vault-crossplane.yaml
 
 helmCharts:
