--- a/gitops/applications/base/vault/vault-values.yaml
+++ b/gitops/applications/base/vault/vault-values.yaml
@@ -1,3 +1,5 @@
+global:
+   tlsDisable: false  
 server:
   enabled: true
   dev:
@@ -7,19 +9,57 @@ server:
       name: post-config
   readinessProbe:
     path: "/v1/sys/health?standbyok=true&sealedcode=204&uninitcode=204"
-
+  extraEnvironmentVars:
+    VAULT_CACERT: /vault/userconfig/vault-ha-tls/ca.crt
+    VAULT_TLSCERT: /vault/userconfig/vault-ha-tls/tls.crt
+    VAULT_TLSKEY: /vault/userconfig/vault-ha-tls/tls.key
+  volumes:
+    - name: userconfig-vault-ha-tls
+      secret:
+        defaultMode: 420
+        secretName: vault-internal-tls
+  volumeMounts:
+    - mountPath: /vault/userconfig/vault-ha-tls
+      name: userconfig-vault-ha-tls
+      readOnly: true
   ha:
     enabled: true
     raft:
       enabled: true
-    config: |
-      ui = true
-      listener "tcp" {
-        tls_disable = 1
-        address = "[::]:8200"
-        cluster_address = "[::]:8201"
-      }
-      service_registration "kubernetes" {}
+      setNodeId: true
+      config: |
+        ui = true
+        listener "tcp" {
+            tls_disable = 0
+            address = "[::]:8200"
+            cluster_address = "[::]:8201"
+            tls_cert_file = "/vault/userconfig/vault-ha-tls/tls.crt"
+            tls_key_file  = "/vault/userconfig/vault-ha-tls/tls.key"
+            tls_client_ca_file = "/vault/userconfig/vault-ha-tls/ca.crt"
+        }
+        storage "raft" {
+            path = "/vault/data"
+            retry_join {
+              leader_api_addr = "https://${ARGOCD_ENV_vault_app_name}-0.${ARGOCD_ENV_vault_app_name}-internal:8200"
+              leader_ca_cert_file = "/vault/userconfig/vault-ha-tls/ca.crt"
+              leader_client_cert_file = "/vault/userconfig/vault-ha-tls/tls.crt"
+              leader_client_key_file = "/vault/userconfig/vault-ha-tls/tls.key"
+            }
+            retry_join {
+              leader_api_addr = "https://${ARGOCD_ENV_vault_app_name}-1.${ARGOCD_ENV_vault_app_name}internal:8200"
+              leader_ca_cert_file = "/vault/userconfig/vault-ha-tls/ca.crt"
+              leader_client_cert_file = "/vault/userconfig/vault-ha-tls/tls.crt"
+              leader_client_key_file = "/vault/userconfig/vault-ha-tls/tls.key"
+            }
+            retry_join {
+              leader_api_addr = "https://${ARGOCD_ENV_vault_app_name}-2.${ARGOCD_ENV_vault_app_name}-internal:8200"
+              leader_ca_cert_file = "/vault/userconfig/vault-ha-tls/ca.crt"
+              leader_client_cert_file = "/vault/userconfig/vault-ha-tls/tls.crt"
+              leader_client_key_file = "/vault/userconfig/vault-ha-tls/tls.key"
+            }
+        }
+        disable_mlock = true
+        service_registration "kubernetes" {}
 
   extraContainers:
     # - name: statsd-exporter
