vault init changes

--- a/gitops/applications/base/vault/vault-init-crs.yaml
+++ b/gitops/applications/base/vault/vault-init-crs.yaml
@@ -34,10 +34,12 @@ data:
     export VAULT_ADDR=https://127.0.0.1:8200
     export VAULT_SKIP_VERIFY=true
     while true;do
-      curl --connect-timeout 15 -s $VAULT_ADDR/v1/sys/health?sealedcode\=204&uninitcode=\204 > /dev/null && break
+      echo "doing curl"
+      curl --insecure --connect-timeout 15 -s $VAULT_ADDR/v1/sys/health?sealedcode\=204&uninitcode=\204 > /dev/null && break
     done
     if [ $(vault status -format=json | jq .initialized) == "false" ]
     then
+      echo "doing vault init"
       vault operator init -key-shares=1 -key-threshold=1 -format=json > /tmp/output.json
       export VAULT_ROOT_TOKEN=$(cat /tmp/output.json | jq .root_token | tr -d '"')
       export UNSEAL_KEY=$(cat /tmp/output.json | jq .unseal_keys_b64[0] | tr -d '"')
