--- a/gitops/applications/base/vault/vault-values.yaml
+++ b/gitops/applications/base/vault/vault-values.yaml
@@ -22,6 +22,9 @@ server:
     - mountPath: /vault/userconfig/vault-ha-tls
       name: userconfig-vault-ha-tls
       readOnly: true
+  dataStorage:
+    enabled: true
+    size: ${ARGOCD_ENV_vault_pvc_size}
   ha:
     enabled: true
     raft:
