--- a/gitops/applications/base/vault-post-config/external-secretstore.yaml
+++ b/gitops/applications/base/vault-post-config/external-secretstore.yaml
@@ -56,7 +56,7 @@ metadata:
 spec:
   provider:
     vault:
-      server: "http://vault-active.${ARGOCD_ENV_vault_namespace}.svc.cluster.local:8200"
+      server: "https://vault-active.${ARGOCD_ENV_vault_namespace}.svc.cluster.local:8200"
       path: "${ARGOCD_ENV_vault_kv_secret}"
       # Version is the Vault KV secret engine version.
       # This can be either "v1" or "v2", defaults to "v2"
