--- a/gitops/applications/base/deploy-env/env-config-xplane-terraform.yaml
+++ b/gitops/applications/base/deploy-env/env-config-xplane-terraform.yaml
@@ -103,7 +103,7 @@ spec:
       }    
       
       provider "vault" {
-        address = "http://vault-active.${ARGOCD_ENV_vault_namespace}.svc.cluster.local:8200"
+        address = "https://vault-active.${ARGOCD_ENV_vault_namespace}.svc.cluster.local:8200"
         token   = jsondecode(file("$${path.module}/vault-keys.json")).root_token 
       }
 
