--- a/gitops/applications/base/zitadel-post-config/vault-oidc-xplane-terraform.yaml
+++ b/gitops/applications/base/zitadel-post-config/vault-oidc-xplane-terraform.yaml
@@ -97,7 +97,7 @@ spec:
       }
 
       provider "vault" {
-        address = "http://vault-active.${ARGOCD_ENV_vault_namespace}.svc.cluster.local:8200"
+        address = "https://vault-active.${ARGOCD_ENV_vault_namespace}.svc.cluster.local:8200"
         token   = var.root_token
       }
 
