--- a/terraform/gitlab/ci-templates/bootstrap-v2/.gitlab-ci.yml
+++ b/terraform/gitlab/ci-templates/bootstrap-v2/.gitlab-ci.yml
@@ -40,7 +40,7 @@ variables:
   KUBE_IN_CLUSTER_CONFIG: true
   PIPELINE_EXECUTOR: true
   IGNORE_TF_DEPRECATION_WARNING: true
-  VAULT_ADDR: http://vault-active.vault.svc.cluster.local:8200
+  VAULT_ADDR: https://vault-active.vault.svc.cluster.local:8200
 
 image: ${CI_REGISTRY_IMAGE}:${IMAGE_TAG}
 
