--- a/gitops/applications/base/vault/vault-certs.yaml
+++ b/gitops/applications/base/vault/vault-certs.yaml
@@ -54,8 +54,6 @@ spec:
   - server auth
   - client auth
   dnsNames:
-  - "*.${ARGOCD_ENV_vault_app_name}-internal.${ARGOCD_ENV_vault_namespace}.svc.cluster.local"
-  - "*.${ARGOCD_ENV_vault_app_name}-internal"
-  - "*.${ARGOCD_ENV_vault_app_name}"
+  - "*.${ARGOCD_ENV_vault_namespace}.svc.cluster.local"
   ipAddresses:
   - 127.0.0.1
