--- a/gitops/applications/base/vault-post-config/external-secretstore.yaml
+++ b/gitops/applications/base/vault-post-config/external-secretstore.yaml
@@ -59,7 +59,7 @@ spec:
       server: "https://vault-active.${ARGOCD_ENV_vault_namespace}.svc.cluster.local:8200"
       path: "${ARGOCD_ENV_vault_kv_secret}"
       caProvider:
-          type: secret
+          type: Secret
           name: vault-internal-tls
           key: ca.crt
           namespace: ${ARGOCD_ENV_vault_namespace}
