--- a/gitops/applications/base/deploy-env-onboard/env-onboard-xplane-terraform.yaml
+++ b/gitops/applications/base/deploy-env-onboard/env-onboard-xplane-terraform.yaml
@@ -116,6 +116,13 @@ spec:
         name: netbird-ansible-secret-vars
         key: netbird-oauth.json
 
+    - filename: vault-ca.crt
+      source: Secret
+      secretRef:
+        namespace: ${ARGOCD_ENV_vault_namespace}
+        name: vault-internal-tls
+        key: ca.crt        
+
   # This optional configuration block can be used to inject HCL into any
   # workspace that uses this provider config, for example to setup Terraform
   # providers.
@@ -166,7 +173,8 @@ spec:
       
       provider "vault" {
         address = "https://vault-active.${ARGOCD_ENV_vault_namespace}.svc.cluster.local:8200"
-        token   = jsondecode(file("$${path.module}/vault-keys.json")).root_token 
+        token   = jsondecode(file("$${path.module}/vault-keys.json")).root_token
+        ca_cert_file = "$${path.module}/vault-ca.crt"
       }
 
       provider "kubernetes" {}
