--- a/gitops/applications/base/deploy-env/env-config-xplane-terraform.yaml
+++ b/gitops/applications/base/deploy-env/env-config-xplane-terraform.yaml
@@ -74,6 +74,13 @@ spec:
         name: ${ARGOCD_ENV_vault_keys_secret}
         key: vault-keys.json
 
+    - filename: vault-ca.crt
+      source: Secret
+      secretRef:
+        namespace: ${ARGOCD_ENV_vault_namespace}
+        name: vault-internal-tls
+        key: ca.crt        
+
   # This optional configuration block can be used to inject HCL into any
   # workspace that uses this provider config, for example to setup Terraform
   # providers.
