--- a/gitops/applications/base/netbird/netbird-values.yaml
+++ b/gitops/applications/base/netbird/netbird-values.yaml
@@ -212,3 +212,7 @@ dashboard:
     - >
       sed -i 's/listen \[\:\:\]\:80 default_server\;//g' /etc/nginx/http.d/default.conf &&
       /usr/bin/supervisord -c /etc/supervisord.conf
+
+metrics:
+  serviceMonitor:
+    enabled: false
