test: add extra labels

--- a/gitops/applications/base/netbird/netbird-values.yaml
+++ b/gitops/applications/base/netbird/netbird-values.yaml
@@ -215,5 +215,7 @@ dashboard:
 
 metrics:
   serviceMonitor:
-    annotations: 
+    labels: 
       prometheus.io/scrape: "true"
+      prometheus.io/port: "8080"
+      prometheus.io/path: "/metrics"
