test: fix label

--- a/gitops/applications/base/netbird/netbird-values.yaml
+++ b/gitops/applications/base/netbird/netbird-values.yaml
@@ -218,4 +218,4 @@ metrics:
     labels: 
       prometheus.io/scrape: "true"
       prometheus.io/port: "8080"
-      prometheus.io/path: "/metrics"
+      prometheus.io/path: "metrics"
