test: add relabelling and metric relabellings

--- a/gitops/applications/base/netbird/netbird-values.yaml
+++ b/gitops/applications/base/netbird/netbird-values.yaml
@@ -215,5 +215,20 @@ dashboard:
 
 metrics:
   serviceMonitor:
-    interval: 1m
-    scrapeTimeout: 30s
+    metricRelabelings:
+      - sourceLabels: [__name__]
+        regex: "http_requests_total"
+        action: keep
+      - sourceLabels: [pod]
+        targetLabel: instance
+        action: replace
+      - sourceLabels: [namespace, pod]
+        separator: "/"
+        targetLabel: pod_namespace
+        action: replace
+    relabelings:        
+      - targetLabel: job
+        replacement: "custom-job"
+      - regex: ".*"
+        targetLabel: unnecessary_label
+        action: drop
