--- a/gitops/applications/base/netbird/netbird-values.yaml
+++ b/gitops/applications/base/netbird/netbird-values.yaml
@@ -216,4 +216,4 @@ dashboard:
 metrics:
   serviceMonitor:
     selector:
-      app.kubernetes.io/name: netbird-relay
+      app.kubernetes.io/name: "netbird-relay | netbird-signal"
