--- a/gitops/applications/base/vault-post-config/external-secretstore.yaml
+++ b/gitops/applications/base/vault-post-config/external-secretstore.yaml
@@ -56,13 +56,8 @@ metadata:
 spec:
   provider:
     vault:
-      server: "https://vault-active.${ARGOCD_ENV_vault_namespace}.svc.cluster.local:8200"
+      server: "http://vault-active.${ARGOCD_ENV_vault_namespace}.svc.cluster.local:8200"
       path: "${ARGOCD_ENV_vault_kv_secret}"
-      caProvider:
-          type: Secret
-          name: vault-internal-tls
-          key: ca.crt
-          namespace: ${ARGOCD_ENV_vault_namespace}
       # Version is the Vault KV secret engine version.
       # This can be either "v1" or "v2", defaults to "v2"
       version: "v2"
