--- a/gitops/applications/base/deploy-env/env-config-xplane-terraform.yaml
+++ b/gitops/applications/base/deploy-env/env-config-xplane-terraform.yaml
@@ -73,13 +73,7 @@ spec:
         namespace: ${ARGOCD_ENV_vault_namespace}
         name: ${ARGOCD_ENV_vault_keys_secret}
         key: vault-keys.json
-
-    - filename: vault-ca.crt
-      source: Secret
-      secretRef:
-        namespace: ${ARGOCD_ENV_vault_namespace}
-        name: vault-internal-tls
-        key: ca.crt        
+       
 
   # This optional configuration block can be used to inject HCL into any
   # workspace that uses this provider config, for example to setup Terraform
@@ -110,9 +104,8 @@ spec:
       }    
       
       provider "vault" {
-        address = "https://vault-active.${ARGOCD_ENV_vault_namespace}.svc.cluster.local:8200"
+        address = "http://vault-active.${ARGOCD_ENV_vault_namespace}.svc.cluster.local:8200"
         token   = jsondecode(file("$${path.module}/vault-keys.json")).root_token
-        ca_cert_file = "$${path.module}/vault-ca.crt"
       }
 
       provider "gitlab" {
