--- a/gitops/applications/base/vault/vault-crossplane.yaml
+++ b/gitops/applications/base/vault/vault-crossplane.yaml
@@ -28,13 +28,7 @@ spec:
       secretRef:
         namespace: ${ARGOCD_ENV_vault_namespace}
         name: ${ARGOCD_ENV_vault_keys_secret}
-        key: vault-keys.json
-    - filename: vault-ca.crt
-      source: Secret
-      secretRef:
-        namespace: ${ARGOCD_ENV_vault_namespace}
-        name: vault-internal-tls
-        key: ca.crt        
+        key: vault-keys.json       
   # This optional configuration block can be used to inject HCL into any
   # workspace that uses this provider config, for example to setup Terraform
   # providers.
@@ -53,9 +47,8 @@ spec:
         type = string
       }
       provider "vault" {
-        address = "https://vault-active.${ARGOCD_ENV_vault_namespace}.svc.cluster.local:8200"
+        address = "http://vault-active.${ARGOCD_ENV_vault_namespace}.svc.cluster.local:8200"
         token   = var.root_token
-        ca_cert_file = "$${path.module}/vault-ca.crt"
       }
 ---
 apiVersion: tf.upbound.io/v1beta1
