--- a/gitops/applications/base/vault/vault-init-crs.yaml
+++ b/gitops/applications/base/vault/vault-init-crs.yaml
@@ -31,8 +31,7 @@ metadata:
 data:
   bootstrap.sh: |
     #!/bin/bash
-    export VAULT_ADDR=https://127.0.0.1:8200
-    export VAULT_SKIP_VERIFY=true
+    export VAULT_ADDR=http://127.0.0.1:8200
     while true;do
       echo "doing curl"
       curl --insecure --connect-timeout 15 -s $VAULT_ADDR/v1/sys/health?sealedcode\=204&uninitcode=\204 > /dev/null && break
