--- a/terraform/gitlab/ci-templates/k8s-cluster/.gitlab-ci.yml
+++ b/terraform/gitlab/ci-templates/k8s-cluster/.gitlab-ci.yml
@@ -42,7 +42,7 @@ variables:
   GIT_SUBMODULE_STRATEGY: none
   IGNORE_TF_DEPRECATION_WARNING: true
   KUBE_IN_CLUSTER_CONFIG: true
-  VAULT_ADDR: https://vault-active.vault.svc.cluster.local:8200
+  VAULT_ADDR: http://vault-active.vault.svc.cluster.local:8200
 
 image: ${CI_REGISTRY_IMAGE}:${IMAGE_TAG}
 
