--- a/gitops/applications/base/vault/vault-init-crs.yaml
+++ b/gitops/applications/base/vault/vault-init-crs.yaml
@@ -87,8 +87,7 @@ spec:
             - "-c"
           args:
             - >
-              export VAULT_ADDR="https://vault-active.${ARGOCD_ENV_vault_namespace}.svc.cluster.local:8200";
-              export VAULT_SKIP_VERIFY=true;
+              export VAULT_ADDR="http://vault-active.${ARGOCD_ENV_vault_namespace}.svc.cluster.local:8200";
               vault login -no-print $VAULT_ROOT_TOKEN;
               vault kv put -mount=$VAULT_KV_SECRET_PATH cloud-api-access cloud_platform_api_client_id=${ARGOCD_ENV_cloud_platform_api_client_id} cloud_platform_api_client_secret=${ARGOCD_ENV_cloud_platform_api_client_secret};
           env:
