test managment metrics config

--- a/gitops/applications/base/netbird/netbird-values.yaml
+++ b/gitops/applications/base/netbird/netbird-values.yaml
@@ -2,6 +2,9 @@ global:
   namespace: "${ARGOCD_ENV_netbird_namespace}"
 
 management:
+  metrics:
+    enabled: true
+    port: 9091
   configmap: |-
     {
       "Stuns": [
