--- a/terraform/ccnew/default-config/common-vars.yaml
+++ b/terraform/ccnew/default-config/common-vars.yaml
@@ -264,3 +264,4 @@ rook_ceph_objects_replica_count: "'3'"
 rook_ceph_osd_count: "'3'"
 rook_ceph_volume_size_per_osd: "500Gi"
 rook_ceph_volumes_provider: "pvc" # host, pvc
+rook_ceph_aws_ebs_csi_driver_helm_version: "2.39.0"
