--- a/gitops/applications/overlays/cloud_provider/aws/rook-ceph-cluster/pvc/kustomization.yaml
+++ b/gitops/applications/overlays/cloud_provider/aws/rook-ceph-cluster/pvc/kustomization.yaml
@@ -10,3 +10,4 @@ helmCharts:
     repo: https://kubernetes-sigs.github.io/aws-ebs-csi-driver
     namespace: kube-system
     valuesFile: aws-ebs-csi-driver-values.yaml
+    version: ${ARGOCD_ENV_aws_ebs_csi_driver_helm_version}
