--- a/gitops/argo-apps/base/rook-ceph.yaml
+++ b/gitops/argo-apps/base/rook-ceph.yaml
@@ -99,3 +99,6 @@ spec:
 
           - name: cluster_domain
             value: "${ARGOCD_ENV_utils_rook_ceph_cluster_domain}"
+
+          - name: aws_ebs_csi_driver_helm_version
+            value: "${ARGOCD_ENV_utils_rook_ceph_aws_ebs_csi_driver_helm_version}"            
