--- a/terraform/ccnew/default-config/common-vars.yaml
+++ b/terraform/ccnew/default-config/common-vars.yaml
@@ -17,6 +17,26 @@ netbird_helm_version: "1.5.6"
 netbird_image_version: "0.31.1"
 netbird_client_version: "0.31.1"
 netbird_dashboard_image_version: "v2.7.0"
+#netbird db settings
+netbird_postgres_replicas: "'1'"
+netbird_postgres_proxy_replicas: "'1'"
+netbird_pgdb_helm_version: "2.4.0"
+netbird_rdbms_provider: "percona"
+netbird_postgres_instance_size: "small"
+netbird_postgres_storage_size: "20Gi"
+netbird_db_storage_size: "5Gi"
+#netbird rds
+netbird_rds_engine: "aurora-postgresql"
+netbird_rds_engine_version: "'16'"
+netbird_rds_replica_count: "'1'"
+netbird_rds_instance_class: "db.t3.medium"
+netbird_rds_storage_encrypted: "'true'"
+netbird_rds_skip_final_snapshot: "'true'"
+netbird_db_backup_retention_period: "'1'"
+netbird_db_preferred_backup_window: "07:00-09:00"
+netbird_db_storage_type: "io1"
+netbird_db_storage_iops: "'5000'"
+#end db settings
 stunner_gateway_operator_helm_version: "0.19.0"
 nexus_helm_version: "4.44.0"
 cert_manager_helm_version: 1.15.0
@@ -50,7 +70,7 @@ netbird_log_level: info
 nexus_image_version: 3.75.1
 nexus_public_access: false
 nexus_storage_size: 30Gi
-nexus_cpu_limit: "4000m"   #https://help.sonatype.com/en/sonatype-nexus-repository-system-requirements.html#UUID-fc21e0ee-c297-0311-0105-1383dfc28a38_bridgehead-idm23446974390921 increase if required
+nexus_cpu_limit: "4000m" #https://help.sonatype.com/en/sonatype-nexus-repository-system-requirements.html#UUID-fc21e0ee-c297-0311-0105-1383dfc28a38_bridgehead-idm23446974390921 increase if required
 nexus_memory_limit: "8Gi"
 nexus_cpu_request: "2000m"
 nexus_memory_request: "4Gi"
@@ -97,7 +117,7 @@ mimir_ingestion_rate: "'200000'"
 mimir_ingestion_burst_size: "'500000'"
 mimir_retention_period: "7d"
 mimir_compactor_deletion_delay: "12h"
-mimir_alerts_notification_receiver: "slack" # options: slack, jira, blackhole. blackhole disables 
+mimir_alerts_notification_receiver: "slack" # options: slack, jira, blackhole. blackhole disables
 
 mimir_distributor_replica_count: "'4'"
 mimir_ingester_replica_count: "'4'"
@@ -160,8 +180,6 @@ loki_query_scheduler_limits_memory: "192Mi"
 loki_compactor_limits_cpu: "150m"
 loki_compactor_limits_memory: "192Mi"
 
-
-
 gitlab_helm_version: "8.1.2"
 gitlab_public_access: true
 gitlab_redis_cluster_size: "'3'"
@@ -212,8 +230,8 @@ gitlab_rds_storage_encrypted: "'true'"
 gitlab_rds_skip_final_snapshot: "'true'"
 gitlab_db_backup_retention_period: "'1'"
 gitlab_db_preferred_backup_window: "07:00-09:00"
-gitlab_db_storage_type: "io1" 
-gitlab_db_storage_iops: "'5000'" 
+gitlab_db_storage_type: "io1"
+gitlab_db_storage_iops: "'5000'"
 #praefect rds
 praefect_rds_engine: "aurora-postgresql"
 praefect_rds_engine_version: "'16'"
@@ -223,7 +241,7 @@ praefect_rds_storage_encrypted: "'true'"
 praefect_rds_skip_final_snapshot: "'true'"
 praefect_db_backup_retention_period: "'1'"
 praefect_db_preferred_backup_window: "07:00-09:00"
-praefect_db_storage_type: "io1" 
+praefect_db_storage_type: "io1"
 praefect_db_storage_iops: "'5000'"
 
 ceph_bucket_max_objects: "'1000000'"
