set args to empty array explicitly

--- a/gitops/applications/base/netbird/netbird-values.yaml
+++ b/gitops/applications/base/netbird/netbird-values.yaml
@@ -214,6 +214,8 @@ dashboard:
         secretKeyRef:
           name: ${ARGOCD_ENV_netbird_preconfig_output_secret}
           key: netbird_client_id
+  podCommand:
+    args: []
 
   # podCommand:
   #   args:
