--- a/gitops/applications/base/netbird/kustomization.yaml
+++ b/gitops/applications/base/netbird/kustomization.yaml
@@ -6,9 +6,9 @@ helmCharts:
     releaseName: netbird
     namespace: ${ARGOCD_ENV_netbird_namespace}
     # version: ${ARGOCD_ENV_netbird_helm_version}
-    version: 1.5.4-rc16
-    # repo: https://totmicro.github.io/helms
-    repo: https://muzammil360.github.io/totmicro-helms
+    version: 1.5.6
+    repo: https://totmicro.github.io/helms
+    # repo: https://muzammil360.github.io/totmicro-helms
     valuesFile: netbird-values.yaml
 
 patches:
