--- a/terraform/ccnew/default-config/common-vars.yaml
+++ b/terraform/ccnew/default-config/common-vars.yaml
@@ -31,6 +31,7 @@ netbird_rds_replica_count: "'1'"
 netbird_rds_instance_class: "db.t3.medium"
 netbird_rds_storage_encrypted: "'true'"
 netbird_rds_skip_final_snapshot: "'true'"
+netbird_rds_postgres_storage_size: "'100'"
 netbird_rds_storage_type: "io1"
 netbird_rds_storage_iops: "'5000'"
 #netbird db backup settings
