--- a/gitops/argo-apps/base/netbird-pre.yaml
+++ b/gitops/argo-apps/base/netbird-pre.yaml
@@ -111,8 +111,14 @@ spec:
           - name: "netbird_relay_secret_key"
             value: "${ARGOCD_ENV_security_netbird_relay_secret_key}"
 
-          - name: "db_secret"
+          - name: "db_secret_name"
             value: "${ARGOCD_ENV_security_netbird_db_secret}"
+
+          - name: "netbird_dsn_secret_name"
+            value: "${ARGOCD_ENV_security_netbird_dsn_secret_name}"
+
+          - name: "netbird_dsn_secret_key"
+            value: "${ARGOCD_ENV_security_netbird_dsn_secret_key}"
 
           - name: "db_name"
             value: "${ARGOCD_ENV_security_netbird_db_name}"
