--- a/gitops/applications/base/netbird-pre/ext-secret-pre.yaml
+++ b/gitops/applications/base/netbird-pre/ext-secret-pre.yaml
@@ -89,7 +89,7 @@ spec:
   data:
     - secretKey: password
       remoteRef:
-        key: ${ARGOCD_ENV_db_secret_name}
+        key: ${ARGOCD_ENV_db_secret}
         property: password
 
   target:
