--- a/gitops/applications/overlays/rdbms_provider/percona/db/kustomization.yaml
+++ b/gitops/applications/overlays/rdbms_provider/percona/db/kustomization.yaml
@@ -2,12 +2,6 @@ apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 
 resources:
+  - backups-objectstore.yaml
   - db-external-name-service.yaml
-
-helmCharts:
-  - name: pg-db
-    releaseName: ${ARGOCD_ENV_app_name}
-    version: ${ARGOCD_ENV_pgdb_helm_version}
-    repo: https://percona.github.io/percona-helm-charts/
-    valuesFile: db-values.yaml
-    namespace: ${ARGOCD_ENV_namespace}
+  - pg-cluster.yaml
