--- a/gitops/applications/overlays/rdbms_provider/percona/db/pg-cluster.yaml
+++ b/gitops/applications/overlays/rdbms_provider/percona/db/pg-cluster.yaml
@@ -55,13 +55,13 @@ spec:
         - secret:
             name: "${ARGOCD_ENV_dbdeploy_name_prefix}-pgbackrest-secret"
       global:
-        objectstore-path: /pgbackrest/${ARGOCD_ENV_dbdeploy_name_prefix}
-        objectstore-retention-full: '7' # keep full backups for x days
-        objectstore-retention-full-type: time #This is based on the total number of days you would like to keep a backup. Option 2 is count
+        repo1-path: /pgbackrest/${ARGOCD_ENV_dbdeploy_name_prefix}
+        repo1-retention-full: '7' # keep full backups for x days
+        repo1-retention-full-type: time #This is based on the total number of days you would like to keep a backup. Option 2 is count
       manual:
         options:
           - '--type=full'
-        repoName: objectstore
+        repoName: repo1
       repoHost:
         affinity:
           podAntiAffinity:
@@ -73,7 +73,7 @@ spec:
                   topologyKey: kubernetes.io/hostname
                 weight: 1
       repos:
-        - name: objectstore
+        - name: repo1
           s3:
             endpoint: "http://rook-ceph-rgw-ceph-objectstore.rook-ceph.svc.cluster.local"
             bucket: "${ARGOCD_ENV_dbdeploy_name_prefix}-backups"
@@ -84,7 +84,7 @@ spec:
             #incremental: "0 1 * * 1-6"
       restore:
         enabled: false
-        repoName: objectstore
+        repoName: repo1
         #options:
         #  - '--set=20250129-134851F'
         #  - --type=time
