feat: enable argocd server-side diff as it will be needed with kyverno mutating webhooks

--- a/gitops/applications/base/kyverno/kyverno-vaules.yaml
+++ b/gitops/applications/base/kyverno/kyverno-vaules.yaml
@@ -1,5 +1,8 @@
 config:
 
+  # TODO
+  # If possible we should not watch and mutate kube-system but image rewrite likely needs it
+
   # Enable Kyverno to touch resources in kube-system namespace
   resourceFiltersExcludeNamespaces:
   - kube-system
