--- a/gitops/applications/overlays/rdbms_provider/percona/db/pg-cluster.yaml
+++ b/gitops/applications/overlays/rdbms_provider/percona/db/pg-cluster.yaml
@@ -78,8 +78,7 @@ spec:
             endpoint: "http://rook-ceph-rgw-ceph-objectstore.rook-ceph.svc.cluster.local"
             bucket: "${ARGOCD_ENV_dbdeploy_name_prefix}-backups"
             region: us-east-1
-          storage:
-            verify-ssl: n
+            verify-ssl: false
           schedules:
             full: "0 0 * * 6"
             differential: "0 1 * * 1-6"
